Cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -29,194 +29,7 @@
         </div>
     </div>
     
-    <div class="flap-container">
-        <!-- <div class="flap-row">
-            <div class="arrivals-row">
-                <div class="flight-code-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">-</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">-</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-                <div class="location-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-                <div class="time-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">:</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">:</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="departures-row">
-                <div class="flight-code-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">-</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">-</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-                <div class="location-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-                <div class="time-flaps">
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">:</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">:</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                    <div class="flap">
-                        <div class="top-flap"><span class="flap-item-top">&nbsp;</span></div>
-                        <div class="bottom-flap"><span class="flap-item-bottom">&nbsp;</span></div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    </div>
+    <div class="flap-container"></div>
     <script src="./scripts/script.js" defer></script>
 </body>
 </html>
